solo-projects/bburnley/piscene/exam02/reverse_bits/2-3-reverse_bits.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r9p17.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Nov 11 21:59:38 PST 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/c++/4.2.1
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/piscine-c-exam02/exam_20161112/bburnley

= Git history ==================================================================
$> git -C /var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user log --pretty='%H - %an, %ad : %s'
f2649dca40b99aec2e9b95c8659872b24e078107 - Exam 42, Fri Nov 11 21:59:13 2016 -0800 : Damn, I'm a bit disappointed in my performance this exam. I think I'm really close on all of my failures, but in many cases I appear not to have accounted for some edge cases later on in the traces. I'll get them next time. Also, this is the second time I've seen reverse_bits. I'm closer to the actual solution this time, but am out of time. So here's my work in progress. Until next week.
d6ab2996aa6c940da4b81f1925925ed66b59cd2f - Exam 42, Fri Nov 11 21:24:13 2016 -0800 : Solution to ex02-3
ad1546ec3d290271b3d2a833befd43e25b44dd60 - Exam 42, Fri Nov 11 20:31:34 2016 -0800 : Solution to ex02-2
d12ef5eadd8f082178539893cd860ff21ae82d5e - Exam 42, Fri Nov 11 19:16:47 2016 -0800 : Solution to ex02
ad9cdce4e2875c869a65ee18f47723b809a4581e - Exam 42, Fri Nov 11 18:37:13 2016 -0800 : Solution to ex01
57c1722a4f93b73d2efc09fa083e56c008352e71 - Exam 42, Fri Nov 11 18:09:08 2016 -0800 : Solution to ex00
 
= Collected files ==========================================
$> ls -lAR /var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user
total 8
-rw-r--r--  1 deepthought  deepthought  1924 Nov 11 21:59 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Nov 11 21:59 ft_atoi
drwxr-xr-x  3 deepthought  deepthought   102 Nov 11 21:59 last_word
drwxr-xr-x  3 deepthought  deepthought   102 Nov 11 21:59 maff_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Nov 11 21:59 print_bits
drwxr-xr-x  3 deepthought  deepthought   102 Nov 11 21:59 repeat_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Nov 11 21:59 reverse_bits

/var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user/ft_atoi:
total 8
-rw-r--r--  1 deepthought  deepthought  1334 Nov 11 21:59 ft_atoi.c

/var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user/last_word:
total 8
-rw-r--r--  1 deepthought  deepthought  1562 Nov 11 21:59 last_word.c

/var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user/maff_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1117 Nov 11 21:59 maff_alpha.c

/var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user/print_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1337 Nov 11 21:59 print_bits.c

/var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user/repeat_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1431 Nov 11 21:59 repeat_alpha.c

/var/folders/b_/w02mf4ks719831rcz4l8kt580000gp/T/tmp0WiCOm/user/reverse_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1292 Nov 11 21:59 reverse_bits.c
 
= reverse_bits =================================================================
$> gcc -Wextra -Wall -Werror main.c reverse_bits.c -o user_exe 
reverse_bits.c:44:20: error: expected ';' after return statement
        return ((char)res)
                          ^
                          ;
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
